# DS_Star_Improvement_MM_projectc

./: .gitignore  README.md  config.yaml  db_conn.py  db_tables.py  docker-compose.yml  dsstar.py  prompt.yaml  provider.py  pyproject.toml
benchmark/: evaluation.ipynb
