[project]
name = "ds-star"
version = "0.1.0"
description = "DS-STAR: A Data Science Agentic Framework"
readme = "README.md"
requires-python = "==3.11.15"
license = { text = "MIT" }
authors = [
    {name = "Jules Lascoux", email="jlslascoux@gmail.com"},
    { name = "Nicolas Perez"}
]
keywords = ["data-science", "ai", "agents", "gemini", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-generativeai>=0.8.0",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "setuptools<81",
    "tqdm>=4.68.1",
    "ydata-profiling>=4.18.4",
]

[project.scripts]
dsstar = "dsstar:main"

[project.urls]
Homepage = "https://github.com/JulesLscx/DS-Star"
Repository ="https://github.com/JulesLscx/DS-Star"
Documentation = "https://github.com/JulesLscx/DS-Star#readme"
"Bug Tracker" = "https://github.com/JulesLscx/DS-Star/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsstar.py"]

[dependency-groups]
dev = []

[tool.uv.dependency-groups]
dev = {requires-python = "==3.11.15"}
